--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-app-demo",
+  "name": "generator-multipage-app",
   "version": "0.0.0",
   "description": "生成项目test版",
   "homepage": "",
