--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "",
+  "name": "test-demo",
   "version": "",
   "description": "",
-  "author": "",
+  "author": "hongluyan",
   "main": "",
   "repository": "",
   "sideEffects": [
@@ -13,11 +13,22 @@
     "devServer": "webpack-dev-server --env.production=false --config build/webpack.dev.config.js",
     "dev": "webpack --env.production=false --config build/webpack.dev.config.js",
     "build": "webpack --env.production --config build/webpack.prod.config.js",
-    "build:sit-preview": "npm_config_report=true webpack --env.production --config build/webpack.prod.config.js"
+    "build:sit-preview": "npm_config_report=true webpack --env.production --config build/webpack.prod.config.js",
+    "build-start": "npm run build && node app.js",
+    "start": "node app.js"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "core-js": "^2.6.9"
+    "core-js": "^2.6.9",
+    "dnscache": "^1.0.1",
+    "koa": "^2.5.1",
+    "koa-bodyparser": "^3.2.0",
+    "koa-helmet": "^4.0.0",
+    "koa-jsonp": "^2.0.2",
+    "koa-logger": "^3.2.0",
+    "koa-router": "^7.4.0",
+    "koa-static2": "^0.1.8",
+    "koa-views": "^6.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
@@ -31,20 +42,19 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
-    "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.3.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^1.0.0",
+    "colors": "^1.4.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "eslint": "^5.10.0",
-    "eslint-config-airbnb": "^17.1.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-html": "^5.0.0",
     "file-loader": "^2.0.0",
-    "html-webpack-plugin": "^3.2.0",
     "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
