--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -21,8 +21,10 @@
     "@babel/polyfill": "^7.0.0",
     "core-js": "^2.6.9",
     "dnscache": "^1.0.1",
+    "ejs": "^3.0.1",
     "koa": "^2.5.1",
     "koa-bodyparser": "^3.2.0",
+    "koa-ejs": "^4.3.0",
     "koa-helmet": "^4.0.0",
     "koa-jsonp": "^2.0.2",
     "koa-logger": "^3.2.0",
@@ -49,6 +51,7 @@
     "colors": "^1.4.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
+    "ejs-loader": "^0.3.5",
     "eslint": "^5.10.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-html": "^5.0.0",
